@@ -1,0 +1,120 @@
+62 0 0 0 491943 82 0 1024 -128 0 0 0
+62 0 0 1 491943 82 1 1024 127 0 0 0
+125 0 1 0 491943 82 0 0 -128 102 0 0
+125 0 1 1 491943 82 1 0 127 102 0 0
+187 1 0 0 521196 81 0 896 -128 0 0 0
+187 1 0 1 521196 81 1 896 127 0 0 0
+250 1 1 0 521196 81 0 832 -128 125 0 0
+250 1 1 1 521196 81 1 832 127 125 0 0
+312 2 0 0 552188 80 0 768 -128 0 0 0
+312 2 0 1 552188 80 1 768 127 0 0 0
+375 2 1 0 552188 80 0 704 -128 123 0 0
+375 2 1 1 552188 80 1 704 127 123 0 0
+437 3 0 0 585022 79 0 640 -128 0 0 0
+437 3 0 1 585022 79 1 640 127 0 0 0
+500 3 1 0 585022 79 0 576 -128 126 0 0
+500 3 1 1 585022 79 1 576 127 126 0 0
+562 4 0 0 619810 78 0 512 -128 0 0 0
+562 4 0 1 619810 78 1 512 127 0 0 0
+625 4 1 0 619810 78 0 448 -128 102 0 0
+625 4 1 1 619810 78 1 448 127 102 0 0
+687 5 0 0 656666 77 0 384 -128 0 0 0
+687 5 0 1 656666 77 1 384 127 0 0 0
+750 5 1 0 656666 77 0 320 -128 115 0 0
+750 5 1 1 656666 77 1 320 127 115 0 0
+812 6 0 0 695713 76 0 256 -128 0 0 0
+812 6 0 1 695713 76 1 256 127 0 0 0
+875 6 1 0 695713 76 0 192 -128 100 0 0
+875 6 1 1 695713 76 1 192 127 100 0 0
+937 7 0 0 737082 75 0 128 -128 0 0 0
+937 7 0 1 737082 75 1 128 127 0 0 0
+1000 7 1 0 737082 75 0 64 -128 123 0 0
+1000 7 1 1 737082 75 1 64 127 123 0 0
+1062 8 0 0 780911 74 0 0 -128 0 0 0
+1062 8 0 1 780911 74 1 0 127 0 0 0
+1125 8 1 0 780911 74 0 0 -128 117 0 0
+1125 8 1 1 780911 74 1 0 127 117 0 0
+1187 9 0 0 3506176 48 0 0 -128 0 0 0
+1187 9 0 1 780911 74 1 0 127 106 0 0
+1250 9 1 0 3506176 48 0 0 -128 101 0 0
+1250 9 1 1 780911 74 1 0 127 127 0 0
+1312 0 0 0 491943 82 2 1024 -128 0 0 0
+1312 0 0 1 491943 82 1 1024 127 0 0 0
+1375 0 1 0 491943 82 2 960 -128 102 0 0
+1375 0 1 1 491943 82 1 960 127 102 0 0
+1437 1 0 0 521196 81 2 896 -128 0 0 0
+1437 1 0 1 521196 81 1 896 127 0 0 0
+1500 1 1 0 521196 81 2 832 -128 125 0 0
+1500 1 1 1 521196 81 1 832 127 125 0 0
+1562 2 0 0 552188 80 2 768 -128 0 0 0
+1562 2 0 1 552188 80 1 768 127 0 0 0
+1625 2 1 0 552188 80 2 704 -128 123 0 0
+1625 2 1 1 552188 80 1 704 127 123 0 0
+1687 3 0 0 585022 79 2 640 -128 0 0 0
+1687 3 0 1 585022 79 1 640 127 0 0 0
+1750 3 1 0 585022 79 2 576 -128 126 0 0
+1750 3 1 1 585022 79 1 576 127 126 0 0
+1812 4 0 0 619810 78 2 512 -128 0 0 0
+1812 4 0 1 619810 78 1 512 127 0 0 0
+1875 4 1 0 619810 78 2 448 -128 102 0 0
+1875 4 1 1 619810 78 1 448 127 102 0 0
+1937 5 0 0 656666 77 2 384 -128 0 0 0
+1937 5 0 1 656666 77 1 384 127 0 0 0
+2000 5 1 0 656666 77 2 320 -128 115 0 0
+2000 5 1 1 656666 77 1 320 127 115 0 0
+2062 6 0 0 695713 76 2 256 -128 0 0 0
+2062 6 0 1 695713 76 1 256 127 0 0 0
+2125 6 1 0 695713 76 2 192 -128 100 0 0
+2125 6 1 1 695713 76 1 192 127 100 0 0
+2187 7 0 0 737082 75 2 128 -128 0 0 0
+2187 7 0 1 737082 75 1 128 127 0 0 0
+2250 7 1 0 737082 75 2 64 -128 123 0 0
+2250 7 1 1 737082 75 1 64 127 123 0 0
+2312 8 0 0 780911 74 2 0 -128 0 0 0
+2312 8 0 1 780911 74 1 0 127 0 0 0
+2375 8 1 0 780911 74 2 0 -128 117 0 0
+2375 8 1 1 780911 74 1 0 127 117 0 0
+2437 9 0 0 3506176 48 2 0 -128 0 0 0
+2437 9 0 1 780911 74 1 0 127 106 0 0
+2500 9 1 0 3506176 48 2 0 -128 101 0 0
+2500 9 1 1 780911 74 1 0 127 127 0 0
+2562 0 0 0 491943 82 3 1024 -128 0 0 0
+2562 0 0 1 491943 82 1 1024 127 0 0 0
+2625 0 1 0 491943 82 3 960 -128 102 0 0
+2625 0 1 1 491943 82 1 960 127 102 0 0
+2687 1 0 0 521196 81 3 896 -128 0 0 0
+2687 1 0 1 521196 81 1 896 127 0 0 0
+2750 1 1 0 521196 81 3 832 -128 125 0 0
+2750 1 1 1 521196 81 1 832 127 125 0 0
+2812 2 0 0 552188 80 3 768 -128 0 0 0
+2812 2 0 1 552188 80 1 768 127 0 0 0
+2875 2 1 0 552188 80 3 704 -128 123 0 0
+2875 2 1 1 552188 80 1 704 127 123 0 0
+2937 3 0 0 585022 79 3 640 -128 0 0 0
+2937 3 0 1 585022 79 1 640 127 0 0 0
+3000 3 1 0 585022 79 3 576 -128 126 0 0
+3000 3 1 1 585022 79 1 576 127 126 0 0
+3062 4 0 0 619810 78 3 512 -128 0 0 0
+3062 4 0 1 619810 78 1 512 127 0 0 0
+3125 4 1 0 619810 78 3 448 -128 102 0 0
+3125 4 1 1 619810 78 1 448 127 102 0 0
+3187 5 0 0 656666 77 3 384 -128 0 0 0
+3187 5 0 1 656666 77 1 384 127 0 0 0
+3250 5 1 0 656666 77 3 320 -128 115 0 0
+3250 5 1 1 656666 77 1 320 127 115 0 0
+3312 6 0 0 695713 76 3 256 -128 0 0 0
+3312 6 0 1 695713 76 1 256 127 0 0 0
+3375 6 1 0 695713 76 3 192 -128 100 0 0
+3375 6 1 1 695713 76 1 192 127 100 0 0
+3437 7 0 0 737082 75 3 128 -128 0 0 0
+3437 7 0 1 737082 75 1 128 127 0 0 0
+3500 7 1 0 737082 75 3 64 -128 123 0 0
+3500 7 1 1 737082 75 1 64 127 123 0 0
+3562 8 0 0 780911 74 3 0 -128 0 0 0
+3562 8 0 1 780911 74 1 0 127 0 0 0
+3625 8 1 0 780911 74 3 0 -128 117 0 0
+3625 8 1 1 780911 74 1 0 127 117 0 0
+3687 9 0 0 3506176 48 3 0 -128 0 0 0
+3687 9 0 1 780911 74 1 0 127 106 0 0
+3750 9 1 0 3506176 48 3 0 -128 101 0 0
+3750 9 1 1 780911 74 1 0 127 127 0 0
